Cleanup: Use Java 8 Truth extension
    PiperOrigin-RevId: 346132540